# justlists

./: .gitignore  CMakeLists.txt  Justfile  README.md  REQUIREMENTS.md  imgui.ini  list.list
lua/justlists/: config.lua  core.lua  init.lua  list.lua  markdown_viewer.lua
plugin/: justlists.lua
sources/: main.cpp
